--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "putyourlightson/craft-sendgrid",
     "description": "SendGrid mailer adapter for Craft CMS.",
-    "version": "2.0.0-alpha.1",
+    "version": "2.0.0",
     "type": "craft-plugin",
     "homepage": "https://github.com/putyourlightson/craft-sendgrid",
     "license": "MIT",
@@ -12,7 +12,7 @@
         "email"
     ],
     "require": {
-        "craftcms/cms": "^4.0.0-alpha.1",
+        "craftcms/cms": "^4.0.0",
         "symfony/sendgrid-mailer": "^6.0"
     },
     "autoload": {
