--- a/composer.json
+++ b/composer.json
@@ -1,36 +1,54 @@
 {
-    "name": "putyourlightson/craft-sendgrid",
-    "description": "SendGrid mailer adapter for Craft CMS.",
-    "version": "2.0.1",
-    "type": "craft-plugin",
-    "homepage": "https://github.com/putyourlightson/craft-sendgrid",
-    "license": "MIT",
-    "keywords": [
-        "craft",
-        "cms",
-        "craftcms",
-        "email"
-    ],
-    "require": {
-        "craftcms/cms": "^4.0.0",
-        "symfony/sendgrid-mailer": "^6.0"
-    },
-    "autoload": {
-        "psr-4": {
-          "putyourlightson\\sendgrid\\": "src/"
-        }
-    },
-    "support": {
-        "docs": "https://putyourlightson.com/plugins/sendgrid",
-        "source": "https://github.com/putyourlightson/craft-sendgrid",
-        "issues": "https://github.com/putyourlightson/craft-sendgrid/issues"
-    },
-    "extra": {
-        "name": "SendGrid",
-        "handle": "sendgrid",
-        "developer": "PutYourLightsOn",
-        "developerUrl": "https://putyourlightson.com/",
-        "changelogUrl": "https://raw.githubusercontent.com/putyourlightson/craft-sendgrid/v2/CHANGELOG.md",
-        "class": "putyourlightson\\sendgrid\\Sendgrid"
+  "name": "putyourlightson/craft-sendgrid",
+  "description": "SendGrid mailer adapter for Craft CMS.",
+  "version": "3.0.0-beta.1",
+  "type": "craft-plugin",
+  "homepage": "https://github.com/putyourlightson/craft-sendgrid",
+  "license": "MIT",
+  "keywords": [
+    "email",
+    "mailer",
+    "sendgrid"
+  ],
+  "require": {
+    "php": "^8.2",
+    "craftcms/cms": "^5.0.0-beta.1",
+    "symfony/sendgrid-mailer": "^6.0"
+  },
+  "require-dev": {
+    "craftcms/ecs": "dev-main",
+    "craftcms/phpstan": "dev-main"
+  },
+  "autoload": {
+    "psr-4": {
+      "putyourlightson\\sendgrid\\": "src/"
     }
+  },
+  "scripts": {
+    "phpstan": "phpstan --ansi --memory-limit=1G",
+    "check-cs": "ecs check --ansi",
+    "fix-cs": "ecs check --fix --ansi"
+  },
+  "config": {
+    "allow-plugins": {
+      "craftcms/plugin-installer": true,
+      "pestphp/pest-plugin": true,
+      "yiisoft/yii2-composer": true
+    },
+    "optimize-autoloader": true,
+    "sort-packages": true
+  },
+  "support": {
+    "docs": "https://putyourlightson.com/plugins/sendgrid",
+    "source": "https://github.com/putyourlightson/craft-sendgrid",
+    "issues": "https://github.com/putyourlightson/craft-sendgrid/issues"
+  },
+  "extra": {
+    "name": "SendGrid",
+    "handle": "sendgrid",
+    "developer": "PutYourLightsOn",
+    "developerUrl": "https://putyourlightson.com/",
+    "changelogUrl": "https://raw.githubusercontent.com/putyourlightson/craft-sendgrid/v3/CHANGELOG.md",
+    "class": "putyourlightson\\sendgrid\\Sendgrid"
+  }
 }
